# pixellock

./: README.md  pyproject.toml
config/: config_example.toml
pixellock/: __init__.py  cli.py  main.py
